fix scaling on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 @import './components/colors.scss';
 
+
+html{
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body {
     background-color: $background;
     overflow-x: hidden;
