--- a/src/components/ChatApp/SmallScreen/style.module.scss
+++ b/src/components/ChatApp/SmallScreen/style.module.scss
@@ -13,7 +13,7 @@
 
 .text {
     display: flex;
-    position: absolute;
+    position: relative;
     color: $darkBackground;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: $defaultText;
@@ -39,15 +39,15 @@
 .demoContainer {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 50vh;
 }
 
 
 .demo {
     width: 80%;
-    height: 50vh;
+    height: 80%;
     position: absolute;
-    top: 90%;
+    top: 13%;
     left: 50%;
     transform: translateX(-50%);
 }
