--- a/src/components/MushroomDriver/BigScreen/style.module.scss
+++ b/src/components/MushroomDriver/BigScreen/style.module.scss
@@ -1,28 +1,43 @@
 @import '../../colors.scss';
 
 .backgroundContainer {
+    top: 0%;
     z-index: 0;
-    display: flex;
-    position: relative;
-    height: 100vh;
     width: 100%;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    position: absolute;
     overflow: hidden;
 }
 
 .imgContainer {
+    z-index: 0;
     display: flex;
     width: 100%;
     height: 100vh;
     background-size: contain;
+    position: absolute;
+}
+
+
+.titleContainer{ 
+    pointer-events: none;
+    z-index: 1;
+    position: relative;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: $darkBackground;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: $defaultText;
+    width: 100%;
+    font: bold 30px arial;
 }
 
 .text {
     pointer-events: none;
     z-index: 1;
     display: flex;
-    position: absolute;
+    position: relative;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -32,20 +47,5 @@
     width: 80%;
     height: 100%;
     margin-left: 10%;
-    font: bold 30px arial;
-}
-
-.titleContainer{ 
-    pointer-events: none;
-    z-index: 1;
-    display: flex;
-    position: absolute;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    color: $darkBackground;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: $defaultText;
-    width: 100%;
     font: bold 30px arial;
 }
