--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -22,16 +22,29 @@
 
 .container{ 
     display: flex;
+    justify-content: flex-end;
 }
 
-.item {
+.menuIconContainer{ 
     max-width: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.itemIcon {
+.menuIcon {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.itemContainer {
+    max-width: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.itemIcon{
     width: 100%;
     height: 100%;
 }
